# valorant-peek

./: .gitignore  LICENSE  README.md  index.html  install.ps1  package-lock.json  package.json  vite.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
src/: App.tsx  design.ts  main.tsx  rank.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  client_version.rs  discord.rs  encounter.rs  fetcher.rs  http.rs  lib.rs  main.rs  match_state.rs  model.rs  orchestrator.rs  presence.rs  static_cache.rs  websocket.rs
src/components/: CloseDialog.tsx  HistoryStrip.tsx  IdleScreen.tsx  MatchScreen.tsx  PlayerRow.tsx  PlayerTable.test.tsx  PlayerTable.tsx  ProfileCard.tsx  RecentMatches.tsx  Settings.tsx  StatusScreen.test.tsx  StatusScreen.tsx
